create add new bookings

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -36,7 +36,8 @@
     "download": "تحميل",
     "invoice": "فاتورة",
     "hide_menu": "إخفاء القائمة",
-    "show_menu": "إظهار القائمة"
+    "show_menu": "إظهار القائمة",
+    "collapse_all": "إغلاق الكل"
   },
   "errors": {
     "page_not_found": "الصفحة غير موجودة: {uri}",
@@ -47,6 +48,9 @@
     "internal_server_error": "خطأ في الخادم الداخلي",
     "unknown_error": "خطأ غير معروف",
     "connection_failed": "تعذر الاتصال بالخادم. يرجى المحاولة مرة أخرى لاحقاً.",
+    "connection_error": "تعذر الاتصال بالخادم. يرجى التحقق من اتصال الإنترنت.",
+    "connection_timeout": "انتهت مهلة الاتصال. يرجى المحاولة مرة أخرى.",
+    "server_error": "خطأ في الخادم. يرجى المحاولة مرة أخرى لاحقاً.",
     "unexpected_error": "حدث خطأ غير متوقع. يرجى المحاولة مرة أخرى.",
     "invalid_response": "تنسيق استجابة غير صحيح من الخادم",
     "request_failed": "فشل الطلب",
@@ -98,12 +102,14 @@
     "date": "التاريخ",
     "time": "الوقت",
     "ticket_number": "رقم التذكرة",
+    "voucher": "رقم الفاتورة",
     "order_number": "رقم الطلب",
     "pickup_time_col": "وقت الاستلام",
     "pickup_status": "حالة الاستلام",
     "employee": "الموظف",
     "guest_name": "اسم الضيف",
     "location": "الموقع",
+    "global": "Global",
     "phone_number": "رقم الهاتف",
     "status": "الحالة",
     "agent_name": "اسم الوكيل",
@@ -122,9 +128,14 @@
     "search_by_name": "البحث بالاسم",
     "filter": "تصفية",
     "services": "الخدمات",
+    "service": "خدمة",
     "adult": "بالغ",
     "child": "طفل",
     "kid": "طفل صغير",
+    "adult_count_hint": "أدخل عدد البالغين",
+    "child_count_hint": "أدخل عدد الأطفال",
+    "kid_count_hint": "أدخل عدد الأطفال الصغار",
+    "price_per_person": "السعر للشخص الواحد",
     "adult_price": "سعر البالغ",
     "child_price": "سعر الطفل",
     "kid_price": "سعر الطفل الصغير",
@@ -139,7 +150,20 @@
     "p_after_discount": "السعر بعد الخصم",
     "vat": "ضريبة القيمة المضافة",
     "net_profit": "صافي الربح",
-    "select_agent_location": "يرجى اختيار الوكيل والموقع أولاً"
+    "select_agent_location": "يرجى اختيار الوكيل والموقع أولاً",
+    "at_least_one_service_required": "يجب اختيار خدمة واحدة على الأقل مع إدخال عدد الأشخاص",
+    "loading": "جاري التحميل...",
+    "loading_services": "جاري تحميل الخدمات...",
+    "select_service": "اختر الخدمة",
+    "no_services_available": "لا توجد خدمات متاحة",
+    "agent_required": "الوكيل مطلوب",
+    "location_required": "الموقع مطلوب",
+    "guest_name_required": "اسم الضيف مطلوب",
+    "error_loading_services": "خطأ في تحميل الخدمات",
+    "no_services_available": "لا توجد خدمات متاحة",
+    "saved_successfully": "تم حفظ الحجز بنجاح!",
+    "validation_error_row": "خطأ في التحقق من الصف",
+    "no_valid_bookings": "لا توجد حجوزات صالحة للحفظ. يرجى ملء الحقول المطلوبة."
   },
   "receipt_voucher": {
     "title": "سندات القبض",
