--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -36,7 +36,8 @@
     "download": "Herunterladen",
     "invoice": "Rechnung",
     "hide_menu": "Menü ausblenden",
-    "show_menu": "Menü anzeigen"
+    "show_menu": "Menü anzeigen",
+    "collapse_all": "Alle einklappen"
   },
   "errors": {
     "page_not_found": "Seite nicht gefunden: {uri}",
@@ -47,6 +48,9 @@
     "internal_server_error": "Interner Serverfehler",
     "unknown_error": "Unbekannter Fehler",
     "connection_failed": "Verbindung zum Server nicht möglich. Bitte versuchen Sie es später erneut.",
+    "connection_error": "Verbindung zum Server nicht möglich. Bitte überprüfen Sie Ihre Internetverbindung.",
+    "connection_timeout": "Verbindungszeitüberschreitung. Bitte versuchen Sie es erneut.",
+    "server_error": "Serverfehler. Bitte versuchen Sie es später erneut.",
     "unexpected_error": "Ein unerwarteter Fehler ist aufgetreten. Bitte versuchen Sie es erneut.",
     "invalid_response": "Ungültiges Antwortformat vom Server",
     "request_failed": "Anfrage fehlgeschlagen",
@@ -98,12 +102,14 @@
     "date": "Datum",
     "time": "Zeit",
     "ticket_number": "Ticketnummer",
+    "voucher": "Gutschein",
     "order_number": "Bestellnummer",
     "pickup_time_col": "Abholzeit",
     "pickup_status": "Abholstatus",
     "employee": "Mitarbeiter",
     "guest_name": "Gastname",
     "location": "Standort",
+    "global": "Global",
     "phone_number": "Telefonnummer",
     "status": "Status",
     "agent_name": "Agentenname",
@@ -122,9 +128,14 @@
     "search_by_name": "Nach Namen suchen",
     "filter": "Filter",
     "services": "Dienstleistungen",
+    "service": "Dienst",
     "adult": "Erwachsener",
     "child": "Kind",
     "kid": "Kleinkind",
+    "adult_count_hint": "Anzahl Erwachsene eingeben",
+    "child_count_hint": "Anzahl Kinder eingeben",
+    "kid_count_hint": "Anzahl Kleinkinder eingeben",
+    "price_per_person": "Preis pro Person",
     "adult_price": "Erwachsenenpreis",
     "child_price": "Kinderpreis",
     "kid_price": "Kleinkindpreis",
@@ -139,7 +150,20 @@
     "p_after_discount": "Preis nach Rabatt",
     "vat": "MwSt",
     "net_profit": "Nettogewinn",
-    "select_agent_location": "Wählen Sie zuerst Agent und Standort"
+    "select_agent_location": "Wählen Sie zuerst Agent und Standort",
+    "at_least_one_service_required": "Mindestens ein Service mit Personenzahl ist erforderlich",
+    "loading": "Wird geladen...",
+    "loading_services": "Dienste werden geladen...",
+    "select_service": "Dienst auswählen",
+    "no_services_available": "Keine Dienste verfügbar",
+    "agent_required": "Agent ist erforderlich",
+    "location_required": "Standort ist erforderlich",
+    "guest_name_required": "Gastname ist erforderlich",
+    "error_loading_services": "Fehler beim Laden der Dienste",
+    "no_services_available": "Keine Dienste verfügbar",
+    "saved_successfully": "Buchung erfolgreich gespeichert!",
+    "validation_error_row": "Validierungsfehler in Zeile",
+    "no_valid_bookings": "Keine gültigen Buchungen zum Speichern. Bitte füllen Sie die erforderlichen Felder aus."
   },
   "receipt_voucher": {
     "title": "Quittung",
