--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -36,7 +36,8 @@
     "download": "Download",
     "invoice": "Invoice",
     "hide_menu": "Hide Menu",
-    "show_menu": "Show Menu"
+    "show_menu": "Show Menu",
+    "collapse_all": "Collapse All"
   },
   "errors": {
     "page_not_found": "Page not found: {uri}",
@@ -47,6 +48,9 @@
     "internal_server_error": "Internal Server Error",
     "unknown_error": "Unknown Error",
     "connection_failed": "Unable to connect to server. Please try again later.",
+    "connection_error": "Unable to connect to server. Please check your internet connection.",
+    "connection_timeout": "Connection timeout. Please try again.",
+    "server_error": "Server error. Please try again later.",
     "unexpected_error": "An unexpected error occurred. Please try again.",
     "invalid_response": "Invalid response format from server",
     "request_failed": "Request failed",
@@ -98,12 +102,14 @@
     "date": "Date",
     "time": "Time",
     "ticket_number": "Ticket Number",
+    "voucher": "Voucher",
     "order_number": "Order Number",
     "pickup_time_col": "Pickup time",
     "pickup_status": "Pickup Status",
     "employee": "Employee",
     "guest_name": "Guest Name",
     "location": "Location",
+    "global": "Global",
     "phone_number": "Phone Number",
     "status": "Status",
     "agent_name": "Agent Name",
@@ -122,9 +128,14 @@
     "search_by_name": "Search By Name",
     "filter": "Filter",
     "services": "Services",
+    "service": "Service",
     "adult": "Adult",
     "child": "Child",
     "kid": "Kid",
+    "adult_count_hint": "Enter adult count",
+    "child_count_hint": "Enter child count",
+    "kid_count_hint": "Enter kid count",
+    "price_per_person": "Price per person",
     "adult_price": "Adult Price",
     "child_price": "Child Price",
     "kid_price": "Kid Price",
@@ -139,7 +150,20 @@
     "p_after_discount": "P/After Discount",
     "vat": "Vat",
     "net_profit": "Net profit",
-    "select_agent_location": "Select Agent & Location first"
+    "select_agent_location": "Select Agent & Location first",
+    "at_least_one_service_required": "At least one service with person count is required",
+    "loading": "Loading...",
+    "loading_services": "Loading services...",
+    "select_service": "Select Service",
+    "no_services_available": "No services available",
+    "agent_required": "Agent is required",
+    "location_required": "Location is required",
+    "guest_name_required": "Guest name is required",
+    "error_loading_services": "Error loading services",
+    "no_services_available": "No services available",
+    "saved_successfully": "Booking saved successfully!",
+    "validation_error_row": "Validation error in row",
+    "no_valid_bookings": "No valid bookings to save. Please fill required fields."
   },
   "receipt_voucher": {
     "title": "Receipt Voucher",
