--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -36,7 +36,8 @@
     "download": "Descargar",
     "invoice": "Factura",
     "hide_menu": "Ocultar menú",
-    "show_menu": "Mostrar menú"
+    "show_menu": "Mostrar menú",
+    "collapse_all": "Contraer todo"
   },
   "errors": {
     "page_not_found": "Página no encontrada: {uri}",
@@ -47,6 +48,9 @@
     "internal_server_error": "Error interno del servidor",
     "unknown_error": "Error desconocido",
     "connection_failed": "No se pudo conectar al servidor. Por favor, intente más tarde.",
+    "connection_error": "No se pudo conectar al servidor. Por favor, verifique su conexión a internet.",
+    "connection_timeout": "Tiempo de espera de conexión agotado. Por favor, intente nuevamente.",
+    "server_error": "Error del servidor. Por favor, intente más tarde.",
     "unexpected_error": "Ocurrió un error inesperado. Por favor, intente nuevamente.",
     "invalid_response": "Formato de respuesta inválido del servidor",
     "request_failed": "Solicitud fallida",
@@ -98,12 +102,14 @@
     "date": "Fecha",
     "time": "Hora",
     "ticket_number": "Número de billete",
+    "voucher": "Vale",
     "order_number": "Número de pedido",
     "pickup_time_col": "Hora de recogida",
     "pickup_status": "Estado de recogida",
     "employee": "Empleado",
     "guest_name": "Nombre del huésped",
     "location": "Ubicación",
+    "global": "Global",
     "phone_number": "Número de teléfono",
     "status": "Estado",
     "agent_name": "Nombre del agente",
@@ -122,9 +128,14 @@
     "search_by_name": "Buscar por nombre",
     "filter": "Filtro",
     "services": "Servicios",
+    "service": "Servicio",
     "adult": "Adulto",
     "child": "Niño",
     "kid": "Bebé",
+    "adult_count_hint": "Ingrese número de adultos",
+    "child_count_hint": "Ingrese número de niños",
+    "kid_count_hint": "Ingrese número de bebés",
+    "price_per_person": "Precio por persona",
     "adult_price": "Precio adulto",
     "child_price": "Precio niño",
     "kid_price": "Precio bebé",
@@ -139,7 +150,20 @@
     "p_after_discount": "Precio después del descuento",
     "vat": "IVA",
     "net_profit": "Beneficio neto",
-    "select_agent_location": "Seleccione primero el agente y la ubicación"
+    "select_agent_location": "Seleccione primero el agente y la ubicación",
+    "at_least_one_service_required": "Se requiere al menos un servicio con recuento de personas",
+    "loading": "Cargando...",
+    "loading_services": "Cargando servicios...",
+    "select_service": "Seleccionar servicio",
+    "no_services_available": "No hay servicios disponibles",
+    "agent_required": "El agente es obligatorio",
+    "location_required": "La ubicación es obligatoria",
+    "guest_name_required": "El nombre del huésped es obligatorio",
+    "error_loading_services": "Error al cargar servicios",
+    "no_services_available": "No hay servicios disponibles",
+    "saved_successfully": "¡Reserva guardada exitosamente!",
+    "validation_error_row": "Error de validación en la fila",
+    "no_valid_bookings": "No hay reservas válidas para guardar. Por favor, complete los campos obligatorios."
   },
   "receipt_voucher": {
     "title": "Recibo",
