--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -36,7 +36,8 @@
     "download": "Скачать",
     "invoice": "Счет",
     "hide_menu": "Скрыть меню",
-    "show_menu": "Показать меню"
+    "show_menu": "Показать меню",
+    "collapse_all": "Свернуть все"
   },
   "errors": {
     "page_not_found": "Страница не найдена: {uri}",
@@ -47,6 +48,9 @@
     "internal_server_error": "Внутренняя ошибка сервера",
     "unknown_error": "Неизвестная ошибка",
     "connection_failed": "Не удалось подключиться к серверу. Пожалуйста, попробуйте позже.",
+    "connection_error": "Не удалось подключиться к серверу. Пожалуйста, проверьте подключение к интернету.",
+    "connection_timeout": "Истекло время ожидания подключения. Пожалуйста, попробуйте снова.",
+    "server_error": "Ошибка сервера. Пожалуйста, попробуйте позже.",
     "unexpected_error": "Произошла непредвиденная ошибка. Пожалуйста, попробуйте снова.",
     "invalid_response": "Неверный формат ответа от сервера",
     "request_failed": "Запрос не выполнен",
@@ -98,12 +102,14 @@
     "date": "Дата",
     "time": "Время",
     "ticket_number": "Номер билета",
+    "voucher": "Ваучер",
     "order_number": "Номер заказа",
     "pickup_time_col": "Время получения",
     "pickup_status": "Статус получения",
     "employee": "Сотрудник",
     "guest_name": "Имя гостя",
     "location": "Местоположение",
+    "global": "Global",
     "phone_number": "Номер телефона",
     "status": "Статус",
     "agent_name": "Имя агента",
@@ -122,9 +128,14 @@
     "search_by_name": "Поиск по имени",
     "filter": "Фильтр",
     "services": "Услуги",
+    "service": "Услуга",
     "adult": "Взрослый",
     "child": "Ребенок",
     "kid": "Малыш",
+    "adult_count_hint": "Введите количество взрослых",
+    "child_count_hint": "Введите количество детей",
+    "kid_count_hint": "Введите количество малышей",
+    "price_per_person": "Цена за человека",
     "adult_price": "Цена для взрослого",
     "child_price": "Цена для ребенка",
     "kid_price": "Цена для малыша",
@@ -139,7 +150,20 @@
     "p_after_discount": "Цена после скидки",
     "vat": "НДС",
     "net_profit": "Чистая прибыль",
-    "select_agent_location": "Сначала выберите агента и местоположение"
+    "select_agent_location": "Сначала выберите агента и местоположение",
+    "at_least_one_service_required": "Требуется хотя бы одна услуга с количеством людей",
+    "loading": "Загрузка...",
+    "loading_services": "Загрузка услуг...",
+    "select_service": "Выберите услугу",
+    "no_services_available": "Нет доступных услуг",
+    "agent_required": "Агент обязателен",
+    "location_required": "Местоположение обязательно",
+    "guest_name_required": "Имя гостя обязательно",
+    "error_loading_services": "Ошибка загрузки услуг",
+    "no_services_available": "Услуги недоступны",
+    "saved_successfully": "Бронирование успешно сохранено!",
+    "validation_error_row": "Ошибка валидации в строке",
+    "no_valid_bookings": "Нет действительных бронирований для сохранения. Пожалуйста, заполните обязательные поля."
   },
   "receipt_voucher": {
     "title": "Квитанция",
