feat: Enhance booking functionality with new filter options and UI improvements
- Introduce BookingFilterModel for managing booking filters and integrate it into the booking screen.
- Add BookingFilterDialog for user-friendly filter selection, including date range options.
- Implement BookingStatisticsWidget to display total price and count of bookings.
- Update BookingTableWidget to support new delete functionality and improved pagination.
- Ensure all UI text is translated according to i18n guidelines and maintain Clean Architecture principles.
- Split large files into smaller components for better organization and readability.

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -37,7 +37,16 @@
     "invoice": "فاتورة",
     "hide_menu": "إخفاء القائمة",
     "show_menu": "إظهار القائمة",
-    "collapse_all": "إغلاق الكل"
+    "collapse_all": "إغلاق الكل",
+    "apply": "تطبيق",
+    "clear": "مسح",
+    "all": "الكل",
+    "refresh": "تحديث",
+    "none": "غير محدد",
+    "edit": "تعديل",
+    "delete": "حذف",
+    "delete_confirmation": "تأكيد الحذف",
+    "actions": "الإجراءات"
   },
   "errors": {
     "page_not_found": "الصفحة غير موجودة: {uri}",
@@ -97,6 +106,10 @@
     "title": "الحجوزات",
     "bookings_subtitle": "إدارة ومتابعة جميع حجوزات العملاء",
     "success": "تم تنفيذ عملية الحجز",
+    "update_success": "تم تحديث الحجز بنجاح",
+    "update_error": "فشل تحديث الحجز",
+    "delete_success": "تم حذف الحجز بنجاح",
+    "delete_confirmation_message": "هل أنت متأكد من حذف هذا الحجز؟ لا يمكن التراجع عن هذا الإجراء.",
     "pickup_time": "مواعيد الاستلام",
     "pickup_time_subtitle": "إدارة جداول ومواعيد الاستلام",
     "pickup_time_success": "تم تحديث مواعيد الاستلام",
@@ -110,6 +123,7 @@
     "pickup_status": "حالة الاستلام",
     "employee": "الموظف",
     "guest_name": "اسم الضيف",
+    "guest_name_required": "اسم العميل مطلوب",
     "location": "الموقع",
     "global": "Global",
     "phone_number": "رقم الهاتف",
@@ -143,6 +157,7 @@
     "child_price": "سعر الطفل",
     "kid_price": "سعر الطفل الصغير",
     "total_price": "السعر الإجمالي",
+    "total_count": "عدد الحجوزات",
     "previous": "< السابق",
     "next": "التالي >",
     "description": "يعمل هذا القسيمة كإيصال رسمي وتأكيد للخدمات المحجوزة",
@@ -157,8 +172,17 @@
     "at_least_one_service_required": "يجب اختيار خدمة واحدة على الأقل مع إدخال عدد الأشخاص",
     "loading": "جاري التحميل...",
     "loading_services": "جاري تحميل الخدمات...",
+    "time_start": "وقت البداية",
+    "time_end": "وقت النهاية",
+    "date_range": "نطاق التاريخ",
+    "today": "هذا اليوم",
+    "this_month": "هذا الشهر",
+    "last_month": "آخر شهر",
+    "last_year": "آخر سنة",
+    "custom": "تحديد",
     "select_service": "اختر الخدمة",
     "no_services_available": "لا توجد خدمات متاحة",
+    "selected_filters": "الفلترات المحددة",
     "agent_required": "الوكيل مطلوب",
     "location_required": "الموقع مطلوب",
     "guest_name_required": "اسم الضيف مطلوب",
