--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -37,7 +37,14 @@
     "invoice": "Rechnung",
     "hide_menu": "Menü ausblenden",
     "show_menu": "Menü anzeigen",
-    "collapse_all": "Alle einklappen"
+    "collapse_all": "Alle einklappen",
+    "apply": "Anwenden",
+    "clear": "Löschen",
+    "all": "Alle",
+    "refresh": "Aktualisieren",
+    "none": "Keine",
+    "edit": "Bearbeiten",
+    "delete": "Löschen"
   },
   "errors": {
     "page_not_found": "Seite nicht gefunden: {uri}",
@@ -97,6 +104,10 @@
     "title": "Buchungen",
     "bookings_subtitle": "Verwaltung und Überwachung aller Kundenbuchungen",
     "success": "Buchungsaktion abgeschlossen",
+    "update_success": "Buchung erfolgreich aktualisiert",
+    "update_error": "Buchung konnte nicht aktualisiert werden",
+    "delete_success": "Buchung erfolgreich gelöscht",
+    "delete_confirmation_message": "Sind Sie sicher, dass Sie diese Buchung löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden.",
     "pickup_time": "Abholzeit",
     "pickup_time_subtitle": "Verwaltung von Abholzeiten und Zeitplänen",
     "pickup_time_success": "Abholzeit aktualisiert",
@@ -110,6 +121,7 @@
     "pickup_status": "Abholstatus",
     "employee": "Mitarbeiter",
     "guest_name": "Gastname",
+    "guest_name_required": "Gastname ist erforderlich",
     "location": "Standort",
     "global": "Global",
     "phone_number": "Telefonnummer",
@@ -143,6 +155,7 @@
     "child_price": "Kinderpreis",
     "kid_price": "Kleinkindpreis",
     "total_price": "Gesamtpreis",
+    "total_count": "Gesamtanzahl",
     "previous": "< Zurück",
     "next": "Weiter >",
     "description": "Dieser Gutschein dient als offizieller Beleg und Bestätigung der gebuchten Dienstleistungen",
@@ -158,6 +171,15 @@
     "loading": "Wird geladen...",
     "loading_services": "Dienste werden geladen...",
     "select_service": "Dienst auswählen",
+    "selected_filters": "Ausgewählte Filter",
+    "time_start": "Startzeit",
+    "time_end": "Endzeit",
+    "date_range": "Datumsbereich",
+    "today": "Heute",
+    "this_month": "Dieser Monat",
+    "last_month": "Letzter Monat",
+    "last_year": "Letztes Jahr",
+    "custom": "Benutzerdefiniert",
     "no_services_available": "Keine Dienste verfügbar",
     "agent_required": "Agent ist erforderlich",
     "location_required": "Standort ist erforderlich",
