--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -37,7 +37,16 @@
     "invoice": "Invoice",
     "hide_menu": "Hide Menu",
     "show_menu": "Show Menu",
-    "collapse_all": "Collapse All"
+    "collapse_all": "Collapse All",
+    "apply": "Apply",
+    "clear": "Clear",
+    "all": "All",
+    "refresh": "Refresh",
+    "none": "None",
+    "edit": "Edit",
+    "delete": "Delete",
+    "delete_confirmation": "Confirm Delete",
+    "actions": "Actions"
   },
   "errors": {
     "page_not_found": "Page not found: {uri}",
@@ -97,6 +106,10 @@
     "title": "Bookings",
     "bookings_subtitle": "Manage and monitor all customer bookings",
     "success": "Booking action completed",
+    "update_success": "Booking updated successfully",
+    "update_error": "Failed to update booking",
+    "delete_success": "Booking deleted successfully",
+    "delete_confirmation_message": "Are you sure you want to delete this booking? This action cannot be undone.",
     "pickup_time": "Pickup Time",
     "pickup_time_subtitle": "Manage pickup timings and schedules",
     "pickup_time_success": "Pickup time updated",
@@ -110,6 +123,7 @@
     "pickup_status": "Pickup Status",
     "employee": "Employee",
     "guest_name": "Guest Name",
+    "guest_name_required": "Guest name is required",
     "location": "Location",
     "global": "Global",
     "phone_number": "Phone Number",
@@ -143,6 +157,7 @@
     "child_price": "Child Price",
     "kid_price": "Kid Price",
     "total_price": "Total Price",
+    "total_count": "Total Count",
     "previous": "< Previous",
     "next": "Next >",
     "description": "This voucher serves as an official receipt and confirmation of services booked",
@@ -157,8 +172,17 @@
     "at_least_one_service_required": "At least one service with person count is required",
     "loading": "Loading...",
     "loading_services": "Loading services...",
+    "time_start": "Time Start",
+    "time_end": "Time End",
+    "date_range": "Date Range",
+    "today": "Today",
+    "this_month": "This Month",
+    "last_month": "Last Month",
+    "last_year": "Last Year",
+    "custom": "Custom",
     "select_service": "Select Service",
     "no_services_available": "No services available",
+    "selected_filters": "Selected Filters",
     "agent_required": "Agent is required",
     "location_required": "Location is required",
     "guest_name_required": "Guest name is required",
