--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -37,7 +37,14 @@
     "invoice": "Factura",
     "hide_menu": "Ocultar menú",
     "show_menu": "Mostrar menú",
-    "collapse_all": "Contraer todo"
+    "collapse_all": "Contraer todo",
+    "apply": "Aplicar",
+    "clear": "Limpiar",
+    "all": "Todos",
+    "refresh": "Actualizar",
+    "none": "Ninguno",
+    "edit": "Editar",
+    "delete": "Eliminar"
   },
   "errors": {
     "page_not_found": "Página no encontrada: {uri}",
@@ -97,6 +104,10 @@
     "title": "Reservas",
     "bookings_subtitle": "Gestionar y monitorear todas las reservas de clientes",
     "success": "Acción de reserva completada",
+    "update_success": "Reserva actualizada exitosamente",
+    "update_error": "Error al actualizar la reserva",
+    "delete_success": "Reserva eliminada exitosamente",
+    "delete_confirmation_message": "¿Está seguro de que desea eliminar esta reserva? Esta acción no se puede deshacer.",
     "pickup_time": "Hora de recogida",
     "pickup_time_subtitle": "Gestionar horarios y programaciones de recogida",
     "pickup_time_success": "Hora de recogida actualizada",
@@ -110,6 +121,7 @@
     "pickup_status": "Estado de recogida",
     "employee": "Empleado",
     "guest_name": "Nombre del huésped",
+    "guest_name_required": "El nombre del huésped es obligatorio",
     "location": "Ubicación",
     "global": "Global",
     "phone_number": "Número de teléfono",
@@ -143,6 +155,7 @@
     "child_price": "Precio niño",
     "kid_price": "Precio bebé",
     "total_price": "Precio total",
+    "total_count": "Cantidad total",
     "previous": "< Anterior",
     "next": "Siguiente >",
     "description": "Este vale sirve como recibo oficial y confirmación de los servicios reservados",
@@ -158,6 +171,15 @@
     "loading": "Cargando...",
     "loading_services": "Cargando servicios...",
     "select_service": "Seleccionar servicio",
+    "selected_filters": "Filtros seleccionados",
+    "time_start": "Hora de inicio",
+    "time_end": "Hora de fin",
+    "date_range": "Rango de fechas",
+    "today": "Hoy",
+    "this_month": "Este mes",
+    "last_month": "Mes pasado",
+    "last_year": "Año pasado",
+    "custom": "Personalizado",
     "no_services_available": "No hay servicios disponibles",
     "agent_required": "El agente es obligatorio",
     "location_required": "La ubicación es obligatoria",
