--- a/assets/translations/hi.json
+++ b/assets/translations/hi.json
@@ -36,7 +36,15 @@
     "download": "डाउनलोड",
     "invoice": "चालान",
     "hide_menu": "मेनू छुपाएं",
-    "show_menu": "मेनू दिखाएं"
+    "show_menu": "मेनू दिखाएं",
+    "collapse_all": "सभी बंद करें",
+    "apply": "लागू करें",
+    "clear": "साफ करें",
+    "all": "सभी",
+    "refresh": "रीफ्रेश करें",
+    "none": "कोई नहीं",
+    "edit": "संपादित करें",
+    "delete": "हटाएं"
   },
   "errors": {
     "page_not_found": "पृष्ठ नहीं मिला: {uri}",
@@ -96,6 +104,10 @@
     "title": "बुकिंग",
     "bookings_subtitle": "सभी ग्राहक बुकिंग का प्रबंधन और निगरानी",
     "success": "बुकिंग कार्रवाई पूरी",
+    "update_success": "बुकिंग सफलतापूर्वक अपडेट की गई",
+    "update_error": "बुकिंग अपडेट करने में विफल",
+    "delete_success": "बुकिंग सफलतापूर्वक हटाई गई",
+    "delete_confirmation_message": "क्या आप वाकई इस बुकिंग को हटाना चाहते हैं? इस कार्रवाई को पूर्ववत नहीं किया जा सकता।",
     "pickup_time": "पिकअप समय",
     "pickup_time_subtitle": "पिकअप समय और अनुसूची का प्रबंधन",
     "pickup_time_success": "पिकअप समय अपडेट किया गया",
@@ -108,6 +120,7 @@
     "pickup_status": "पिकअप स्थिति",
     "employee": "कर्मचारी",
     "guest_name": "अतिथि का नाम",
+    "guest_name_required": "अतिथि का नाम आवश्यक है",
     "location": "स्थान",
     "phone_number": "फोन नंबर",
     "status": "स्थिति",
@@ -136,6 +149,7 @@
     "child_price": "बच्चे का मूल्य",
     "kid_price": "छोटे बच्चे का मूल्य",
     "total_price": "कुल मूल्य",
+    "total_count": "कुल संख्या",
     "previous": "< पिछला",
     "next": "अगला >",
     "description": "यह वाउचर बुक की गई सेवाओं की आधिकारिक रसीद और पुष्टि के रूप में कार्य करता है",
@@ -149,11 +163,20 @@
     "select_agent_location": "पहले एजेंट और स्थान चुनें",
     "loading": "लोड हो रहा है...",
     "select_service": "सेवा चुनें",
+    "selected_filters": "चयनित फ़िल्टर",
     "agent_required": "एजेंट आवश्यक है",
     "location_required": "स्थान आवश्यक है",
     "error_loading_services": "सेवाएं लोड करने में त्रुटि",
     "no_services_available": "कोई सेवाएं उपलब्ध नहीं हैं",
-    "saved_successfully": "बुकिंग सफलतापूर्वक सहेजी गई!"
+    "saved_successfully": "बुकिंग सफलतापूर्वक सहेजी गई!",
+    "time_start": "प्रारंभ समय",
+    "time_end": "समाप्ति समय",
+    "date_range": "तारीख सीमा",
+    "today": "आज",
+    "this_month": "इस महीने",
+    "last_month": "पिछला महीना",
+    "last_year": "पिछला वर्ष",
+    "custom": "कस्टम"
   },
   "receipt_voucher": {
     "title": "रसीद वाउचर",
