--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -37,7 +37,14 @@
     "invoice": "Счет",
     "hide_menu": "Скрыть меню",
     "show_menu": "Показать меню",
-    "collapse_all": "Свернуть все"
+    "collapse_all": "Свернуть все",
+    "apply": "Применить",
+    "clear": "Очистить",
+    "all": "Все",
+    "refresh": "Обновить",
+    "none": "Нет",
+    "edit": "Редактировать",
+    "delete": "Удалить"
   },
   "errors": {
     "page_not_found": "Страница не найдена: {uri}",
@@ -97,6 +104,10 @@
     "title": "Бронирования",
     "bookings_subtitle": "Управление и мониторинг всех бронирований клиентов",
     "success": "Действие бронирования выполнено",
+    "update_success": "Бронирование успешно обновлено",
+    "update_error": "Не удалось обновить бронирование",
+    "delete_success": "Бронирование успешно удалено",
+    "delete_confirmation_message": "Вы уверены, что хотите удалить это бронирование? Это действие нельзя отменить.",
     "pickup_time": "Время получения",
     "pickup_time_subtitle": "Управление расписанием получения",
     "pickup_time_success": "Время получения обновлено",
@@ -110,6 +121,7 @@
     "pickup_status": "Статус получения",
     "employee": "Сотрудник",
     "guest_name": "Имя гостя",
+    "guest_name_required": "Имя гостя обязательно",
     "location": "Местоположение",
     "global": "Global",
     "phone_number": "Номер телефона",
@@ -143,6 +155,7 @@
     "child_price": "Цена для ребенка",
     "kid_price": "Цена для малыша",
     "total_price": "Общая цена",
+    "total_count": "Общее количество",
     "previous": "< Назад",
     "next": "Далее >",
     "description": "Этот ваучер служит официальной квитанцией и подтверждением забронированных услуг",
@@ -158,6 +171,15 @@
     "loading": "Загрузка...",
     "loading_services": "Загрузка услуг...",
     "select_service": "Выберите услугу",
+    "selected_filters": "Выбранные фильтры",
+    "time_start": "Время начала",
+    "time_end": "Время окончания",
+    "date_range": "Диапазон дат",
+    "today": "Сегодня",
+    "this_month": "Этот месяц",
+    "last_month": "Прошлый месяц",
+    "last_year": "Прошлый год",
+    "custom": "Настроить",
     "no_services_available": "Нет доступных услуг",
     "agent_required": "Агент обязателен",
     "location_required": "Местоположение обязательно",
